--- a/nginx.conf
+++ b/nginx.conf
@@ -22,7 +22,7 @@ http {
     sendfile        on;
 
     charset UTF-8;
-    expires 600;
+    expires 10m;
     keepalive_timeout  65;
 
     tcp_nopush on;
