added namtethejar conf

--- a/conf/codepot.pl.conf
+++ b/conf/codepot.pl.conf
@@ -4,7 +4,7 @@ server {
     access_log  /var/log/nginx/codepot.access.log;
 
     if ($http_host != "codepot.pl") {
-        rewrite ^ $scheme://codepot.pl$request_uri;
+        return 	302 $scheme://codepot.pl$request_uri;
     }
 
     location / {
