--- a/conf/codepot.pl.conf
+++ b/conf/codepot.pl.conf
@@ -8,7 +8,7 @@ server {
     }
 
     location / {
-        proxy_pass  http://127.0.0.1:80/;
+        proxy_pass  http://codepotpl-production:8080/;
         proxy_redirect off;
         proxy_buffering off;
         proxy_set_header        Host            $host;
