--- a/nginx.conf
+++ b/nginx.conf
@@ -65,6 +65,13 @@ http {
     set_real_ip_from 2405:8100::/32;
     real_ip_header     CF-Connecting-IP;
 
+    map $http_user_agent $ignore_userAgent {
+        default                 0;
+        "~Pingdom.*"            1;
+        "ELB-HealthChecker/1.0" 1;
+        "~updown.io.*"            1;
+    }
+
     include /etc/nginx/conf.d/*.conf;
 }
 
