--- a/conf/codepot.pl.conf
+++ b/conf/codepot.pl.conf
@@ -8,6 +8,10 @@ server {
     }
 
     location / {
+        if ($ignore_userAgent) {
+            access_log off;
+        }
+
         proxy_pass  http://codepotpl-production:8080/;
         proxy_redirect off;
         proxy_buffering off;
