--- a/nginx.conf
+++ b/nginx.conf
@@ -38,10 +38,22 @@ http {
 
     gzip_vary on;
     gzip_proxied any;
-    gzip_comp_level 5;
+    gzip_min_length 1000;
+    gzip_comp_level 6;
     gzip_buffers 16 8k;
     gzip_http_version 1.1;
-    gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_types text/plain
+            text/css
+            text/javascript
+            text/xml
+            text/js
+            application/json
+            application/x-javascript
+            application/javascript
+            application/xml+rss
+            application/xml
+            image/jpeg
+            image/png;
 
     # CLOUDFLARE real ip - https://support.cloudflare.com/hc/en-us/articles/200170706-Does-CloudFlare-have-an-IP-module-for-Nginx-
     set_real_ip_from 199.27.128.0/21;
