same port for staging

--- a/conf/backend.codepot.pl.conf
+++ b/conf/backend.codepot.pl.conf
@@ -1,7 +1,7 @@
 server {
-    listen       8082;
-    server_name  api.codepot.pl;
-    access_log  /var/log/nginx/api.codepot.access.log;
+    listen       8080 ssl spdy;
+    server_name  backend.codepot.pl;
+    access_log  /var/log/nginx/backend.codepot.access.log;
 
     location / {
         proxy_pass  http://codepotbackendstaging_django_1:8080/;
