--- a/conf/registration.codepot.pl.conf
+++ b/conf/registration.codepot.pl.conf
@@ -1,9 +1,8 @@
 server {
-    listen       8081;
+    listen       8080 ssl spdy;
     server_name  registration.codepot.pl;
     access_log  /var/log/nginx/registration.codepot.access.log;
 
     root   /registration;
     index index.html;
-
 }
