--- a/conf/codepot.pl.conf
+++ b/conf/codepot.pl.conf
@@ -43,3 +43,22 @@ server {
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
+
+server {
+    listen 8080 ssl spdy;
+    server_name codepot.pl;
+
+    location / {
+        if ($ignore_userAgent) {
+            access_log off;
+        }
+
+        proxy_pass  http://codepotpl-staging:8080/;
+        proxy_redirect off;
+        proxy_buffering off;
+        proxy_set_header        Host            $host;
+        proxy_set_header        X-Real-IP       $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+}
+
