--- a/conf/codepot.pl.conf
+++ b/conf/codepot.pl.conf
@@ -12,7 +12,7 @@ server {
             access_log off;
         }
 
-        proxy_pass  http://codepotpl-production:8080/;
+        proxy_pass  http://codepot-production:8080/;
         proxy_redirect off;
         proxy_buffering off;
         proxy_set_header        Host            $host;
@@ -35,7 +35,7 @@ server {
             access_log off;
         }
 
-        proxy_pass  http://codepotpl-production:8080/;
+        proxy_pass  http://codepot-production:8080/;
         proxy_redirect off;
         proxy_buffering off;
         proxy_set_header        Host            $host;
@@ -53,7 +53,7 @@ server {
             access_log off;
         }
 
-        proxy_pass  http://codepotpl-staging:8080/;
+        proxy_pass  http://codepot-staging:8080/;
         proxy_redirect off;
         proxy_buffering off;
         proxy_set_header        Host            $host;
