access logs for https://codepot.pl

--- a/conf/codepot.pl.conf
+++ b/conf/codepot.pl.conf
@@ -25,6 +25,7 @@ server {
 server {
     listen 443 ssl spdy;
     server_name codepot.pl *.codepot.pl default;
+    access_log  /var/log/nginx/codepot.access.log;
 
     if ($http_host != "codepot.pl") {
         return  302 $scheme://codepot.pl$request_uri;
@@ -47,6 +48,7 @@ server {
 server {
     listen 8080 ssl spdy;
     server_name codepot.pl;
+    access_log  /var/log/nginx/codepot.access.log;
 
     location / {
         if ($ignore_userAgent) {
