staging registration https

--- a/conf/backend.codepot.pl.conf
+++ b/conf/backend.codepot.pl.conf
@@ -1,5 +1,12 @@
 server {
-    listen       8080 ssl spdy;
+    listen       8080;
+    server_name  backend.codepot.pl;
+    access_log  /var/log/nginx/backend.codepot.access.log;
+    return      301 https://backend.codepot.pl:8443/;
+}
+
+server {
+    listen       8443 ssl spdy;
     server_name  backend.codepot.pl;
     access_log  /var/log/nginx/backend.codepot.access.log;
 
@@ -7,9 +14,11 @@ server {
         proxy_pass  http://codepotbackendstaging_django_1:8080/;
         proxy_redirect off;
         proxy_buffering off;
-        proxy_set_header        Host            $host;
+        proxy_set_header        Host            $http_host;
         proxy_set_header        X-Real-IP       $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Protocol $scheme;
     }
 
 }
+
