Added production backend.

--- a/conf/backend.codepot.pl.conf
+++ b/conf/backend.codepot.pl.conf
@@ -1,14 +1,37 @@
 server {
+    listen       80;
+    server_name  backend.codepot.pl;
+    access_log   /var/log/nginx/production.backend.codepot.access.log;
+    return       301 https://backend.codepot.pl/;
+}
+
+server {
+    listen       443 ssl spdy;
+    server_name  backend.codepot.pl;
+    access_log   /var/log/nginx/production.backend.codepot.access.log;
+
+    location / {
+        proxy_pass  http://codepotbackendproduction_django_1:8080/;
+        proxy_redirect off;
+        proxy_buffering off;
+        proxy_set_header        Host            $http_host;
+        proxy_set_header        X-Real-IP       $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Protocol $scheme;
+    }
+}
+
+server {
     listen       8080;
     server_name  backend.codepot.pl;
-    access_log  /var/log/nginx/backend.codepot.access.log;
-    return      301 https://backend.codepot.pl:8443/;
+    access_log   /var/log/nginx/backend.codepot.access.log;
+    return       301 https://backend.codepot.pl:8443/;
 }
 
 server {
     listen       8443 ssl spdy;
     server_name  backend.codepot.pl;
-    access_log  /var/log/nginx/backend.codepot.access.log;
+    access_log   /var/log/nginx/backend.codepot.access.log;
 
     location / {
         proxy_pass  http://codepotbackendstaging_django_1:8080/;
