--- a/conf/backend.codepot.pl.conf
+++ b/conf/backend.codepot.pl.conf
@@ -19,6 +19,10 @@ server {
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Protocol $scheme;
     }
+
+    location /static {
+        rewrite ^(/static/)(.*)$ https://backend.codepot.pl:8443/static/$2 permanent;
+    }
 }
 
 server {
