--- a/conf/codepot.pl.conf
+++ b/conf/codepot.pl.conf
@@ -3,23 +3,7 @@ server {
     server_name  codepot.pl *.codepot.pl default;
     access_log  /var/log/nginx/codepot.access.log;
 
-    if ($http_host != "codepot.pl") {
-        return 	302 $scheme://codepot.pl$request_uri;
-    }
-
-    location / {
-        if ($ignore_userAgent) {
-            access_log off;
-        }
-
-        proxy_pass  http://codepot-production:8080/;
-        proxy_redirect off;
-        proxy_buffering off;
-        proxy_set_header        Host            $host;
-        proxy_set_header        X-Real-IP       $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
+    return 	301 https://codepot.pl$request_uri;
 }
 
 server {
