renamed log files

--- a/conf/registration.codepot.pl.conf
+++ b/conf/registration.codepot.pl.conf
@@ -1,7 +1,7 @@
 server {
     listen       8080 ssl spdy;
     server_name  registration.codepot.pl;
-    access_log  /var/log/nginx/registration.codepot.access.log;
+    access_log  /var/log/nginx/staging.registration.codepot.access.log;
 
     root   /registration;
     index index.html;
