--- a/conf/backend.codepot.pl.conf
+++ b/conf/backend.codepot.pl.conf
@@ -1,14 +1,14 @@
 server {
     listen       80;
     server_name  backend.codepot.pl;
-    access_log   /var/log/nginx/production.backend.codepot.access.log;
+    access_log   /var/log/nginx/backend.codepot.access.log;
     return       301 https://backend.codepot.pl/;
 }
 
 server {
     listen       443 ssl spdy;
     server_name  backend.codepot.pl;
-    access_log   /var/log/nginx/production.backend.codepot.access.log;
+    access_log   /var/log/nginx/backend.codepot.access.log;
 
     location / {
         proxy_pass  http://codepotbackendproduction_django_1:8080/;
@@ -28,14 +28,14 @@ server {
 server {
     listen       8080;
     server_name  backend.codepot.pl;
-    access_log   /var/log/nginx/backend.codepot.access.log;
+    access_log   /var/log/nginx/staging.backend.codepot.access.log;
     return       301 https://backend.codepot.pl:8443/;
 }
 
 server {
     listen       8443 ssl spdy;
     server_name  backend.codepot.pl;
-    access_log   /var/log/nginx/backend.codepot.access.log;
+    access_log   /var/log/nginx/staging.backend.codepot.access.log;
 
     location / {
         proxy_pass  http://codepotbackendstaging_django_1:8080/;
