--- a/conf/codepot.pl.conf
+++ b/conf/codepot.pl.conf
@@ -32,7 +32,7 @@ server {
 server {
     listen 8080 ssl spdy;
     server_name codepot.pl;
-    access_log  /var/log/nginx/codepot.access.log;
+    access_log  /var/log/nginx/staging.codepot.access.log;
 
     location / {
         if ($ignore_userAgent) {
