--- a/conf/codepot.pl.conf
+++ b/conf/codepot.pl.conf
@@ -1,37 +1,6 @@
 server {
-    listen       80;
-    server_name  codepot.pl *.codepot.pl default;
-    access_log  /var/log/nginx/codepot.access.log;
-
-    return 	301 https://codepot.pl$request_uri;
-}
-
-server {
-    listen 443 ssl spdy;
-    server_name codepot.pl *.codepot.pl default;
-    access_log  /var/log/nginx/codepot.access.log;
-
-    if ($http_host != "codepot.pl") {
-        return  302 $scheme://codepot.pl$request_uri;
-    }
-
-    location / {
-        if ($ignore_userAgent) {
-            access_log off;
-        }
-
-        proxy_pass  http://codepot-production:8080/;
-        proxy_redirect off;
-        proxy_buffering off;
-        proxy_set_header        Host            $host;
-        proxy_set_header        X-Real-IP       $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-}
-
-server {
     listen 8080 ssl spdy;
-    server_name codepot.pl;
+    server_name codepot.pl default;
     access_log  /var/log/nginx/staging.codepot.access.log;
 
     location / {
@@ -48,3 +17,9 @@ server {
     }
 }
 
+server {
+    listen 8080 ssl spdy;
+    server_name *.codepot.pl default;
+    access_log  /var/log/nginx/staging.codepot.access.log;
+    return 302 https://codepot.pl;
+}
