--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 user  nginx;
-worker_processes  4;
+worker_processes  1;
 
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
@@ -22,7 +22,7 @@ http {
   sendfile        on;
 
   charset UTF-8;
-  expires 10m;
+  expires 10;
   keepalive_timeout  65;
 
   tcp_nopush on;
@@ -68,28 +68,6 @@ http {
   ssl_prefer_server_ciphers on;
 
   add_header Strict-Transport-Security max-age=15768000;
-
-  # CLOUDFLARE real ip - https://support.cloudflare.com/hc/en-us/articles/200170706-Does-CloudFlare-have-an-IP-module-for-Nginx-
-  set_real_ip_from 199.27.128.0/21;
-  set_real_ip_from 173.245.48.0/20;
-  set_real_ip_from 103.21.244.0/22;
-  set_real_ip_from 103.22.200.0/22;
-  set_real_ip_from 103.31.4.0/22;
-  set_real_ip_from 141.101.64.0/18;
-  set_real_ip_from 108.162.192.0/18;
-  set_real_ip_from 190.93.240.0/20;
-  set_real_ip_from 188.114.96.0/20;
-  set_real_ip_from 197.234.240.0/22;
-  set_real_ip_from 198.41.128.0/17;
-  set_real_ip_from 162.158.0.0/15;
-  set_real_ip_from 104.16.0.0/12;
-  set_real_ip_from 172.64.0.0/13;
-  set_real_ip_from 2400:cb00::/32;
-  set_real_ip_from 2606:4700::/32;
-  set_real_ip_from 2803:f800::/32;
-  set_real_ip_from 2405:b500::/32;
-  set_real_ip_from 2405:8100::/32;
-  real_ip_header     CF-Connecting-IP;
 
   map $http_user_agent $ignore_userAgent {
       default                   0;
