--- a/conf/logs.codepot.pl.conf
+++ b/conf/logs.codepot.pl.conf
@@ -5,6 +5,8 @@ server {
 
     root   /files;
     autoindex on;
+    autoindex_exact_size off;
+    autoindex_localtime on;
 
     error_page 403 404 = @foobar;
 
