--- a/pagespeed.conf
+++ b/pagespeed.conf
@@ -1,30 +1,41 @@
-# Enable pagespeed
-pagespeed on;
+pagespeed on;	
+pagespeed FileCachePath /var/tmp;
 
-# Needs to exist and be writable by nginx.
-pagespeed FileCachePath /var/cache/nginx;
-pagespeed XHeaderValue "ngx_pagespeed";
+pagespeed MapOriginDomain "http://codepot.mjasion.pl:8081" "https://codepot.pl:8080";
+pagespeed FetchHttps enable;
+pagespeed SslCertDirectory /ssl;
+pagespeed SslCertFile file;
+
+pagespeed InPlaceResourceOptimization on;
+pagespeed RewriteLevel OptimizeForBandwidth;
+pagespeed RewriteLevel PassThrough;
+pagespeed EnableFilters recompress_images,resize_images,remove_quotes;
+pagespeed DisableFilters convert_jpeg_to_webp,recompress_webp;
+
+
+location /ngx_pagespeed_statistics { allow all; }
+location /ngx_pagespeed_global_statistics { allow all; }
+location /ngx_pagespeed_message { allow all; }
+location /pagespeed_console { allow all; }
+location ~ ^/pagespeed_admin { allow all; }
+location ~ ^/pagespeed_global_admin { allow all; }
+
+	pagespeed StatisticsPath /ngx_pagespeed_statistics;
+#pagespeed GlobalStatisticsPath /ngx_pagespeed_global_statistics;
+pagespeed MessagesPath /ngx_pagespeed_message;
+pagespeed ConsolePath /pagespeed_console;
+pagespeed AdminPath /pagespeed_admin;
+#pagespeed GlobalAdminPath /pagespeed_global_admin;
+
+
+location ~ "^/ngx_pagespeed_static/" { }
+location ~ "^/ngx_pagespeed_beacon$" { }
+
 
 # Ensure requests for pagespeed optimized resources go to the pagespeed handler
 # and no extraneous headers get set.
 location ~ "\.pagespeed\.([a-z]\.)?[a-z]{2}\.[^.]{10}\.[^.]+" {
-    add_header "" "";
+  add_header "DUpa" "stasiu";
 }
-location ~ "^/ngx_pagespeed_static/" { }
+location ~ "^/pagespeed_static/" { }
 location ~ "^/ngx_pagespeed_beacon$" { }
-location /ngx_pagespeed_statistics { allow 127.0.0.1; deny all; }
-location /ngx_pagespeed_global_statistics { allow 127.0.0.1; deny all; }
-location /ngx_pagespeed_message { allow 127.0.0.1; deny all; }
-
-# The filters we'll use
-pagespeed RewriteLevel CoreFilters;
-pagespeed EnableFilters rewrite_domains,trim_urls,sprite_images,prioritize_critical_css,lazyload_images,defer_javascript;
-
-#The filters we don't want
-pagespeed ForbidFilters convert_jpeg_to_webp;
-
-# TODO Get rid of the port (caused by docker config)
-#pagespeed MapProxyDomain localhost:59080/path www.sample.com/path;
-
-# Force caching to get the css into pagespeed cache
-#pagespeed ForceCaching on;
