--- a/nginx.conf
+++ b/nginx.conf
@@ -67,7 +67,7 @@ http {
   ssl_dhparam /ssl/dhparam.pem;
   ssl_prefer_server_ciphers on;
 
-  add_header Strict-Transport-Security max-age=15768000;
+  add_header Strict-Transport-Security "max-age=15768000; includeSubdomains";
 
   # CLOUDFLARE real ip - https://support.cloudflare.com/hc/en-us/articles/200170706-Does-CloudFlare-have-an-IP-module-for-Nginx-
   set_real_ip_from 199.27.128.0/21;
