--- a/nginx.conf
+++ b/nginx.conf
@@ -67,7 +67,7 @@ http {
   ssl_dhparam /ssl/dhparam.pem;
   ssl_prefer_server_ciphers on;
 
-  add_header Strict-Transport-Security max-age=15768000;
+  add_header Strict-Transport-Security "max-age=15768000; includeSubdomains";
 
   map $http_user_agent $ignore_userAgent {
       default                   0;
