--- a/conf/codepot.pl.conf
+++ b/conf/codepot.pl.conf
@@ -1,14 +1,14 @@
 server {
-    listen       80;
-    server_name  codepot.pl *.codepot.pl default;
+    listen       80 default_server;
+    server_name  codepot.pl *.codepot.pl;
     access_log  /var/log/nginx/codepot.access.log;
 
     return 	301 https://codepot.pl$request_uri;
 }
 
 server {
-    listen 443 ssl spdy;
-    server_name codepot.pl *.codepot.pl default;
+    listen 443 ssl spdy default_server;
+    server_name codepot.pl *.codepot.pl;
     access_log  /var/log/nginx/codepot.access.log;
 
     if ($http_host != "codepot.pl") {
