fix conflicting server name

--- a/conf/registration.codepot.pl.conf
+++ b/conf/registration.codepot.pl.conf
@@ -1,6 +1,6 @@
 server {
     listen       80;
-    server_name  backend.codepot.pl;
+    server_name  registration.codepot.pl;
     access_log   /var/log/nginx/registration.codepot.access.log;
     return       301 https://registration.codepot.pl/;
 }
