--- a/conf/codepot.pl.conf
+++ b/conf/codepot.pl.conf
@@ -1,6 +1,6 @@
 server {
-    listen 80 ssl spdy;
-    server_name codepot.pl default;
+    listen 80 ssl spdy default;
+    server_name codepot.pl;
     access_log  /var/log/nginx/staging.codepot.access.log;
 
     location / {
