--- a/conf/codepot.pl.conf
+++ b/conf/codepot.pl.conf
@@ -3,17 +3,22 @@ server {
     server_name codepot.pl;
     access_log  /var/log/nginx/staging.codepot.access.log;
 
+    proxy_redirect off;
+    proxy_buffering off;
+    proxy_set_header        Host            $host;
+    proxy_set_header        X-Real-IP       $remote_addr;
+    proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+
     location / {
         if ($ignore_userAgent) {
             access_log off;
         }
+        proxy_pass  http://codepot-staging:8080;
+    }
 
-        proxy_pass  http://codepot-staging:8080/;
-        proxy_redirect off;
-        proxy_buffering off;
-        proxy_set_header        Host            $host;
-        proxy_set_header        X-Real-IP       $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+    location ~* ^.+.(jpg|jpeg|gif|png|ico|js|css|pdf|txt|woff)$ {
+        expires 7d;
+        proxy_pass  http://codepot-staging:8080;
     }
 }
 
