--- a/conf/backend.codepot.pl.conf
+++ b/conf/backend.codepot.pl.conf
@@ -10,6 +10,8 @@ server {
     server_name  backend.codepot.pl;
     access_log   /var/log/nginx/backend.codepot.access.log;
 
+    expires 5m;
+
     location / {
         proxy_pass  http://codepotbackendproduction_django_1:8080/;
         proxy_redirect off;
