--- a/conf/codepot.pl.conf
+++ b/conf/codepot.pl.conf
@@ -15,16 +15,22 @@ server {
         return  302 $scheme://codepot.pl$request_uri;
     }
 
+    proxy_redirect off;
+    proxy_buffering off;
+    proxy_set_header        Host            $host;
+    proxy_set_header        X-Real-IP       $remote_addr;
+    proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+
     location / {
         if ($ignore_userAgent) {
             access_log off;
         }
+        expires 5m;
+        proxy_pass  http://codepot-production:8080;
+    }
 
-        proxy_pass  http://codepot-production:8080/;
-        proxy_redirect off;
-        proxy_buffering off;
-        proxy_set_header        Host            $host;
-        proxy_set_header        X-Real-IP       $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+    location ~* ^.+.(jpg|jpeg|gif|png|ico|js|css|pdf|txt|woff)$ {
+        expires 7d;
+        proxy_pass  http://codepot-production:8080;
     }
 }
