log request body

--- a/conf/backend.codepot.pl.conf
+++ b/conf/backend.codepot.pl.conf
@@ -9,6 +9,7 @@ server {
     listen       443 ssl spdy;
     server_name  backend.codepot.pl;
     access_log   /var/log/nginx/staging.backend.codepot.access.log;
+    access_log   /var/log/nginx/body.staging.backend.codepot.access.log postdata;
 
     location / {
         proxy_pass  http://codepotbackendstaging_django_1:8080/;
