--- a/nginx.conf
+++ b/nginx.conf
@@ -17,6 +17,11 @@ http {
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
 
+  log_format postdata '$remote_addr [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for" "$request_body"';
+
+
   access_log  /var/log/nginx/access.log  main;
 
   sendfile        on;
