http and https logs

--- a/conf/backend.codepot.pl.conf
+++ b/conf/backend.codepot.pl.conf
@@ -1,15 +1,16 @@
 server {
     listen       80;
     server_name  backend.codepot.pl;
-    access_log   /var/log/nginx/staging.backend.codepot.access.log;
+    access_log   /var/log/nginx/http.staging.backend.codepot.access.log;
+    access_log   /var/log/nginx/http.body.staging.backend.codepot.access.log postdata;
     return       301 https://backend.codepot.pl:8443/;
 }
 
 server {
     listen       443 ssl spdy;
     server_name  backend.codepot.pl;
-    access_log   /var/log/nginx/staging.backend.codepot.access.log;
-    access_log   /var/log/nginx/body.staging.backend.codepot.access.log postdata;
+    access_log   /var/log/nginx/https.staging.backend.codepot.access.log;
+    access_log   /var/log/nginx/https.body.staging.backend.codepot.access.log postdata;
 
     location / {
         proxy_pass  http://codepotbackendstaging_django_1:8080/;
