--- a/conf/backend.codepot.pl.conf
+++ b/conf/backend.codepot.pl.conf
@@ -7,7 +7,7 @@ server {
 }
 
 server {
-    listen       443 ssl spdy;
+    listen       443;
     server_name  backend.codepot.pl;
     access_log   /var/log/nginx/https.staging.backend.codepot.access.log;
     access_log   /var/log/nginx/https.body.staging.backend.codepot.access.log postdata;
