http instead https

--- a/conf/backend.codepot.pl.conf
+++ b/conf/backend.codepot.pl.conf
@@ -3,14 +3,7 @@ server {
     server_name  backend.codepot.pl;
     access_log   /var/log/nginx/http.staging.backend.codepot.access.log;
     access_log   /var/log/nginx/http.body.staging.backend.codepot.access.log postdata;
-    return       301 https://backend.codepot.pl:8443/;
-}
-
-server {
-    listen       443 ssl spdy;
-    server_name  backend.codepot.pl;
-    access_log   /var/log/nginx/https.staging.backend.codepot.access.log;
-    access_log   /var/log/nginx/https.body.staging.backend.codepot.access.log postdata;
+    listen       443;
 
     location / {
         proxy_pass  http://codepotbackendstaging_django_1:8080/;
@@ -19,7 +12,7 @@ server {
         proxy_set_header        Host            $http_host;
         proxy_set_header        X-Real-IP       $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        X-Forwarded-Protocol $scheme;
+        proxy_set_header        X-Forwarded-Protocol "https";
     }
 
 }
