allow only payu bot

--- a/conf/backend.codepot.pl.conf
+++ b/conf/backend.codepot.pl.conf
@@ -2,7 +2,21 @@ server {
     listen       80;
     server_name  backend.codepot.pl;
     access_log   /var/log/nginx/backend.codepot.access.log;
-    return       301 https://backend.codepot.pl/;
+
+
+    location / {
+        if ($http_user_agent !~* "Jakarta Commons-HttpClient/3.1") {
+            return       301 https://backend.codepot.pl/;
+        }
+        proxy_pass  http://codepotbackendproduction_django_1:8080/;
+        proxy_redirect off;
+        proxy_buffering off;
+        proxy_set_header        Host            $http_host;
+        proxy_set_header        X-Real-IP       $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Protocol "https";
+    }
+
 }
 
 server {
@@ -24,6 +38,6 @@ server {
     }
 
     location /static {
-        rewrite ^(/static/)(.*)$ https://backend.codepot.pl:8443/static/$2 permanent;
+        rewrite ^(/static/)(.*)$ https://backend.codepot.pl/static/$2 permanent;
     }
 }
