removed subdomains from hsts

--- a/nginx.conf
+++ b/nginx.conf
@@ -72,7 +72,7 @@ http {
   ssl_dhparam /ssl/dhparam.pem;
   ssl_prefer_server_ciphers on;
 
-  add_header Strict-Transport-Security "max-age=15768000; includeSubdomains";
+  add_header Strict-Transport-Security "max-age=15768000;";
 
   map $http_user_agent $ignore_userAgent {
       default                   0;
