Google Drive Django admin static files lol.

--- a/conf/backend.codepot.pl.conf
+++ b/conf/backend.codepot.pl.conf
@@ -17,6 +17,9 @@ server {
         proxy_set_header        X-Forwarded-Protocol "https";
     }
 
+    location /static {
+        rewrite ^(/static/)(.*)$ https://3e9fb94258d941fe3125ae9a42e46ec74bbc76ed.googledrive.com/host/0B6AyE38juSpqMnNkZ1JEdFY1WUE/$2 permanent;
+    }
 }
 
 server {
@@ -38,6 +41,6 @@ server {
     }
 
     location /static {
-        rewrite ^(/static/)(.*)$ https://backend.codepot.pl/static/$2 permanent;
+        rewrite ^(/static/)(.*)$ https://3e9fb94258d941fe3125ae9a42e46ec74bbc76ed.googledrive.com/host/0B6AyE38juSpqMnNkZ1JEdFY1WUE/$2 permanent;
     }
 }
