commented fix for payu

--- a/conf/backend.codepot.pl.conf
+++ b/conf/backend.codepot.pl.conf
@@ -4,18 +4,18 @@ server {
     access_log   /var/log/nginx/backend.codepot.access.log;
 
 
-    location / {
-        if ($http_user_agent !~* "Jakarta Commons-HttpClient/3.1") {
-            return       301 https://backend.codepot.pl/;
-        }
-        proxy_pass  http://codepotbackendproduction_django_1:8080/;
-        proxy_redirect off;
-        proxy_buffering off;
-        proxy_set_header        Host            $http_host;
-        proxy_set_header        X-Real-IP       $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        X-Forwarded-Protocol "https";
-    }
+   #location / {
+   #    if ($http_user_agent !~* "Jakarta Commons-HttpClient/3.1") {
+   #        return       301 https://backend.codepot.pl/;
+   #    }
+   #    proxy_pass  http://codepotbackendproduction_django_1:8080/;
+   #    proxy_redirect off;
+   #    proxy_buffering off;
+   #    proxy_set_header        Host            $http_host;
+   #    proxy_set_header        X-Real-IP       $remote_addr;
+   #    proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+   #    proxy_set_header        X-Forwarded-Protocol "https";
+   #}
 
     location /static {
         rewrite ^(/static/)(.*)$ https://3e9fb94258d941fe3125ae9a42e46ec74bbc76ed.googledrive.com/host/0B6AyE38juSpqMnNkZ1JEdFY1WUE/$2 permanent;
