--- a/conf/backend.codepot.pl.conf
+++ b/conf/backend.codepot.pl.conf
@@ -1,8 +1,7 @@
 server {
     listen       80;
     server_name  backend.codepot.pl;
-    access_log   /var/log/nginx/http.staging.backend.codepot.access.log;
-    access_log   /var/log/nginx/http.body.staging.backend.codepot.access.log postdata;
+    access_log   /var/log/nginx/staging.backend.codepot.access.log;
     listen       443;
 
     location / {
