--- a/conf/logs.codepot.pl.conf
+++ b/conf/logs.codepot.pl.conf
@@ -1,6 +1,6 @@
 server {
-    listen 80 ssl spdy;
-    server_name logs.codepot.pl;
+    listen 80;
+    server_name logs.codepot.pl logs.codepot.tk;
     access_log  /var/log/nginx/logs.codepot.access.log;
 
     root   /files;
