--- a/conf/registration.codepot.pl.conf
+++ b/conf/registration.codepot.pl.conf
@@ -1,6 +1,22 @@
 server {
-    listen       80 ssl spdy;
+    listen       80;
     server_name  registration.codepot.pl;
+    access_log  /var/log/nginx/staging.registration.codepot.access.log;
+    return       302 http://registration.codepot.tk:8080/;
+}
+server {
+    listen       443 ssl spdy;
+    server_name  registration.codepot.pl;
+    access_log  /var/log/nginx/staging.registration.codepot.access.log;
+
+    root   /registration;
+    index index.html;
+    try_files $uri.html $uri $uri/ /;
+}
+
+server {
+    listen       80;
+    server_name  registration.codepot.tk;
     access_log  /var/log/nginx/staging.registration.codepot.access.log;
 
     root   /registration;
