--- a/conf/codepot.pl.conf
+++ b/conf/codepot.pl.conf
@@ -1,5 +1,13 @@
 server {
-    listen 80 ssl spdy default;
+    listen 80;
+    server_name codepot.pl;
+    access_log  /var/log/nginx/staging.codepot.access.log;
+
+
+}
+
+server {
+    listen 443 ssl spdy;
     server_name codepot.pl;
     access_log  /var/log/nginx/staging.codepot.access.log;
 
@@ -23,8 +31,24 @@ server {
 }
 
 server {
-    listen 80 ssl spdy;
-    server_name *.codepot.pl default;
-    access_log  /var/log/nginx/staging.codepot.access.log;
-    return 302 https://codepot.pl;
+    listen       80;
+    server_name  *.codepot.tk codepot.tk default;
+    access_log   /var/log/nginx/staging.codepot.tk.log;
+    proxy_redirect off;
+    proxy_buffering off;
+    proxy_set_header        Host            $host;
+    proxy_set_header        X-Real-IP       $remote_addr;
+    proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+
+    location / {
+        if ($ignore_userAgent) {
+            access_log off;
+        }
+        proxy_pass  http://codepot-staging:8080;
+    }
+
+    location ~* ^.+.(jpg|jpeg|gif|png|ico|js|css|pdf|txt|woff)$ {
+        expires 7d;
+        proxy_pass  http://codepot-staging:8080;
+    }
 }
