--- a/conf/registration.codepot.pl.conf
+++ b/conf/registration.codepot.pl.conf
@@ -9,9 +9,14 @@ server {
     server_name  registration.codepot.pl;
     access_log  /var/log/nginx/staging.registration.codepot.access.log;
 
-    root   /registration;
-    index index.html;
-    try_files $uri.html $uri $uri/ /;
+    location / {
+        if ($ignore_userAgent) {
+            access_log off;
+        }
+        root   /registration;
+        index index.html;
+        try_files $uri.html $uri $uri/ /;
+    }
 }
 
 server {
@@ -19,7 +24,12 @@ server {
     server_name  registration.codepot.tk;
     access_log  /var/log/nginx/staging.registration.codepot.access.log;
 
-    root   /registration;
-    index index.html;
-    try_files $uri.html $uri $uri/ /;
+    location / {
+        if ($ignore_userAgent) {
+            access_log off;
+        }
+        root   /registration;
+        index index.html;
+        try_files $uri.html $uri $uri/ /;
+    }
 }
