--- a/conf/registration.codepot.pl.conf
+++ b/conf/registration.codepot.pl.conf
@@ -10,8 +10,12 @@ server {
     server_name  registration.codepot.pl;
     access_log  /var/log/nginx/registration.codepot.access.log;
 
-
-    root   /registration;
-    index index.html;
-    try_files $uri.html $uri $uri/ /;
+    location / {
+        if ($ignore_userAgent) {
+            access_log off;
+        }
+        root   /registration;
+        index index.html;
+        try_files $uri.html $uri $uri/ /;
+    }
 }
