--- a/conf/logs.codepot.pl.conf
+++ b/conf/logs.codepot.pl.conf
@@ -3,7 +3,7 @@ server {
     server_name logs.codepot.pl logs.codepot.tk;
     access_log  /var/log/nginx/logs.codepot.access.log;
 
-    root   /files;
+    root   /logs;
     autoindex on;
     autoindex_exact_size off;
     autoindex_localtime on;
