--- a/conf/codepot.pl.conf
+++ b/conf/codepot.pl.conf
@@ -28,6 +28,11 @@ server {
         expires 7d;
         proxy_pass  http://codepot-staging:8080;
     }
+
+    location /status {
+        stub_status;
+        access_log off;
+    }
 }
 
 server {
@@ -51,4 +56,5 @@ server {
         expires 7d;
         proxy_pass  http://codepot-staging:8080;
     }
+
 }
