--- a/conf/codepot.pl.conf
+++ b/conf/codepot.pl.conf
@@ -33,4 +33,10 @@ server {
         expires 7d;
         proxy_pass  http://codepot-production:8080;
     }
+
+
+    location /status {
+        stub_status;
+        access_log off;
+    }
 }
