--- a/conf/backend.codepot.pl.conf
+++ b/conf/backend.codepot.pl.conf
@@ -27,7 +27,7 @@ server {
     server_name  backend.codepot.pl;
     access_log   /var/log/nginx/backend.codepot.access.log;
 
-    expires 5m;
+    expires 60s;
 
     location / {
         proxy_pass  http://codepotbackendproduction_django_1:8080/;
