--- a/conf/codepot.pl.conf
+++ b/conf/codepot.pl.conf
@@ -25,12 +25,12 @@ server {
         if ($ignore_userAgent) {
             access_log off;
         }
-        expires 5m;
+        expires 60s;
         proxy_pass  http://codepot-production:8080;
     }
 
     location ~* ^.+.(jpg|jpeg|gif|png|ico|js|css|pdf|txt|woff)$ {
-        expires 7d;
+        expires 60s;
         proxy_pass  http://codepot-production:8080;
     }
 
