--- a/conf/backend.codepot.pl.conf
+++ b/conf/backend.codepot.pl.conf
@@ -9,6 +9,9 @@ server {
   listen       443 ssl spdy;
   server_name  backend.codepot.pl;
   access_log   /var/log/nginx/staging.backend.codepot.access.log;
+
+  limit_req zone=backend burst=10;
+
   location / {
     proxy_pass  http://codepotbackendstaging_django_1:8080/;
     proxy_redirect off;
