--- a/conf/backend.codepot.pl.conf
+++ b/conf/backend.codepot.pl.conf
@@ -3,6 +3,7 @@ server {
     server_name  backend.codepot.pl;
     access_log   /var/log/nginx/backend.codepot.access.log;
 
+    limit_req zone=backend burst=10;
 
    #location / {
    #    if ($http_user_agent !~* "Jakarta Commons-HttpClient/3.1") {
@@ -26,6 +27,8 @@ server {
     listen       443 ssl spdy;
     server_name  backend.codepot.pl;
     access_log   /var/log/nginx/backend.codepot.access.log;
+
+    limit_req zone=backend burst=10;
 
     expires 60s;
 
