--- a/conf/backend.codepot.pl.conf
+++ b/conf/backend.codepot.pl.conf
@@ -33,7 +33,7 @@ server {
     expires 60s;
 
     location / {
-        proxy_pass  http://codepotbackendproduction_django_1:8080/;
+        proxy_pass  http://backend/;
         proxy_redirect off;
         proxy_buffering off;
         proxy_set_header        Host            $http_host;
