--- a/nginx.conf
+++ b/nginx.conf
@@ -75,6 +75,13 @@ http {
 
   add_header Strict-Transport-Security "max-age=15768000;";
 
+  upstream backend {
+    least_conn;
+    server codepotbackendproduction_django_1:8080 fail_timeout=15s;
+    server codepotbackendproduction_django_2:8080 fail_timeout=15s;
+    server codepotbackendproduction_django_3:8080 fail_timeout=15s;
+  }
+
   map $http_user_agent $ignore_userAgent {
       default                   0;
       "~Pingdom.*"              1;
