--- a/conf/backend.codepot.pl.conf
+++ b/conf/backend.codepot.pl.conf
@@ -28,7 +28,7 @@ server {
     server_name  backend.codepot.pl;
     access_log   /var/log/nginx/backend.codepot.access.log;
 
-    limit_req zone=backend burst=10;
+    limit_req zone=backend burst=100 nodelay;
 
     expires 60s;
 
