--- a/conf/backend.codepot.pl.conf
+++ b/conf/backend.codepot.pl.conf
@@ -10,7 +10,7 @@ server {
   server_name  backend.codepot.pl;
   access_log   /var/log/nginx/staging.backend.codepot.access.log;
 
-  limit_req zone=backend burst=10;
+  limit_req zone=backend burst=50 nodelay;
 
   location / {
     proxy_pass  http://codepotbackendstaging_django_1:8080/;
