--- a/conf/codepot.tk.conf
+++ b/conf/codepot.tk.conf
@@ -1,16 +1,7 @@
 server {
     listen 80;
-    server_name codepot.pl;
-    access_log  /var/log/nginx/staging.codepot.access.log;
-
-
-}
-
-server {
-    listen 443 ssl spdy;
-    server_name codepot.pl;
-    access_log  /var/log/nginx/staging.codepot.access.log;
-
+    server_name  *.codepot.tk codepot.tk default;
+    access_log   /var/log/nginx/codepot.tk.log;
     proxy_redirect off;
     proxy_buffering off;
     proxy_set_header        Host            $host;
@@ -21,22 +12,17 @@ server {
         if ($ignore_userAgent) {
             access_log off;
         }
-        proxy_pass  http://codepot-staging:8080;
+        proxy_pass  http://codepot-production:8080;
     }
 
     location ~* ^.+.(jpg|jpeg|gif|png|ico|js|css|pdf|txt|woff)$ {
         expires 7d;
-        proxy_pass  http://codepot-staging:8080;
-    }
-
-    location /status {
-        stub_status;
-        access_log off;
+        proxy_pass  http://codepot-production:8080;
     }
 }
 
 server {
-    listen       80;
+    listen       8080;
     server_name  *.codepot.tk codepot.tk default;
     access_log   /var/log/nginx/staging.codepot.tk.log;
     proxy_redirect off;
