new staging configuration

--- a/conf/codepot.pl.conf
+++ b/conf/codepot.pl.conf
@@ -1,60 +1,26 @@
 server {
-    listen 80;
+    listen 8080;
     server_name codepot.pl;
     access_log  /var/log/nginx/staging.codepot.access.log;
-
-
+    return       302 http://codepot.tk:8080/;
 }
 
 server {
-    listen 443 ssl spdy;
+    listen 8443 ssl spdy;
     server_name codepot.pl;
     access_log  /var/log/nginx/staging.codepot.access.log;
-
-    proxy_redirect off;
-    proxy_buffering off;
-    proxy_set_header        Host            $host;
-    proxy_set_header        X-Real-IP       $remote_addr;
-    proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
 
     location / {
         if ($ignore_userAgent) {
             access_log off;
         }
-        proxy_pass  http://codepot-staging:8080;
-    }
 
-    location ~* ^.+.(jpg|jpeg|gif|png|ico|js|css|pdf|txt|woff)$ {
-        expires 7d;
-        proxy_pass  http://codepot-staging:8080;
-    }
-
-    location /status {
-        stub_status;
-        access_log off;
+        proxy_pass  http://codepot.tk:8080;
+        proxy_redirect off;
+        proxy_buffering off;
+        proxy_set_header        Host            "codepot.tk";
+        proxy_set_header        X-Real-IP       $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
 
-server {
-    listen       80;
-    server_name  *.codepot.tk codepot.tk default;
-    access_log   /var/log/nginx/staging.codepot.tk.log;
-    proxy_redirect off;
-    proxy_buffering off;
-    proxy_set_header        Host            $host;
-    proxy_set_header        X-Real-IP       $remote_addr;
-    proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-
-    location / {
-        if ($ignore_userAgent) {
-            access_log off;
-        }
-        proxy_pass  http://codepot-staging:8080;
-    }
-
-    location ~* ^.+.(jpg|jpeg|gif|png|ico|js|css|pdf|txt|woff)$ {
-        expires 7d;
-        proxy_pass  http://codepot-staging:8080;
-    }
-
-}
