--- a/conf/backend.codepot.pl.conf
+++ b/conf/backend.codepot.pl.conf
@@ -1,41 +1,24 @@
 server {
-  listen       80;
+  listen       8080;
   server_name  backend.codepot.pl;
   access_log   /var/log/nginx/staging.backend.codepot.access.log;
   return       302 http://backend.codepot.tk:8080/;
 }
 
 server {
-  listen       443 ssl spdy;
+  listen       8443 ssl spdy;
   server_name  backend.codepot.pl;
   access_log   /var/log/nginx/staging.backend.codepot.access.log;
 
   limit_req zone=backend burst=50 nodelay;
 
   location / {
-    proxy_pass  http://codepotbackendstaging_django_1:8080/;
+    proxy_pass  http://backend.codepot.tk:8080/;
     proxy_redirect off;
     proxy_buffering off;
-    proxy_set_header        Host            $http_host;
+    proxy_set_header        Host            "backend.codepot.tk";
     proxy_set_header        X-Real-IP       $remote_addr;
     proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header        X-Forwarded-Protocol "http";
   }
-}
-
-server {
-  listen       80;
-  server_name  backend.codepot.tk;
-  access_log   /var/log/nginx/staging.backend.codepot.access.log;
-
-  location / {
-    proxy_pass  http://codepotbackendstaging_django_1:8080/;
-    proxy_redirect off;
-    proxy_buffering off;
-    proxy_set_header        Host            $http_host;
-    proxy_set_header        X-Real-IP       $remote_addr;
-    proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header        X-Forwarded-Protocol "http";
-  }
-
 }
