--- a/conf/registration.codepot.pl.conf
+++ b/conf/registration.codepot.pl.conf
@@ -1,35 +1,19 @@
 server {
-    listen       80;
+    listen       8080;
     server_name  registration.codepot.pl;
     access_log  /var/log/nginx/staging.registration.codepot.access.log;
     return       302 http://registration.codepot.tk:8080/;
 }
 server {
-    listen       443 ssl spdy;
+    listen       8443 ssl spdy;
     server_name  registration.codepot.pl;
     access_log  /var/log/nginx/staging.registration.codepot.access.log;
-
     location / {
-        if ($ignore_userAgent) {
-            access_log off;
-        }
-        root   /registration;
-        index index.html;
-        try_files $uri.html $uri $uri/ /;
-    }
-}
-
-server {
-    listen       80;
-    server_name  registration.codepot.tk;
-    access_log  /var/log/nginx/staging.registration.codepot.access.log;
-
-    location / {
-        if ($ignore_userAgent) {
-            access_log off;
-        }
-        root   /registration;
-        index index.html;
-        try_files $uri.html $uri $uri/ /;
-    }
-}
+        proxy_pass  http://registration.codepot.tk:8080/;
+          proxy_redirect off;
+        proxy_buffering off;
+        proxy_set_header        Host            "registration.codepot.tk";
+        proxy_set_header        X-Real-IP       $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Protocol "http";
+    }}
