change limit_Req status codes

--- a/nginx.conf
+++ b/nginx.conf
@@ -38,6 +38,8 @@ http {
 
   server_tokens off;
   limit_req_zone $binary_remote_addr zone=backend:5m rate=75r/m;
+  limit_req_status 429;
+  limit_conn_status 429;
 
   gzip  on;
   gzip_disable "msie6";
