--- a/conf/codepot.tk.conf
+++ b/conf/codepot.tk.conf
@@ -16,7 +16,7 @@ server {
     }
 
     location ~* ^.+.(jpg|jpeg|gif|png|ico|js|css|pdf|txt|woff)$ {
-        expires 7d;
+        expires 1;
         proxy_pass  http://codepot-production:8080;
     }
 }
@@ -39,7 +39,7 @@ server {
     }
 
     location ~* ^.+.(jpg|jpeg|gif|png|ico|js|css|pdf|txt|woff)$ {
-        expires 7d;
+        expires 1;
         proxy_pass  http://codepot-staging:8080;
     }
 
