--- a/nginx.conf
+++ b/nginx.conf
@@ -27,7 +27,7 @@ http {
   sendfile        on;
 
   charset UTF-8;
-  expires 60;
+  expires 1;
   keepalive_timeout  65;
 
   tcp_nopush on;
@@ -73,6 +73,13 @@ http {
 #  ssl_dhparam /ssl/dhparam.pem;
 #  ssl_prefer_server_ciphers on;
 
+  upstream backend {
+    least_conn;
+    server codepotbackendproduction_django_1:8080 fail_timeout=15s;
+    server codepotbackendproduction_django_2:8080 fail_timeout=15s;
+    server codepotbackendproduction_django_3:8080 fail_timeout=15s;
+    server codepotbackendproduction_django_4:8080 fail_timeout=15s;
+  }
   map $http_user_agent $ignore_userAgent {
       default                   0;
       "~Pingdom.*"              1;
