--- a/conf/backend.codepot.tk.conf
+++ b/conf/backend.codepot.tk.conf
@@ -3,6 +3,8 @@ server {
   server_name  backend.codepot.tk;
   access_log   /var/log/nginx/staging.backend.codepot.access.log;
 
+  limit_req zone=backend burst=10 nodelay;
+
   location / {
     proxy_pass  http://backend/;
     proxy_redirect off;
