--- a/conf/backend.codepot.pl.conf
+++ b/conf/backend.codepot.pl.conf
@@ -10,7 +10,8 @@ server {
   server_name  backend.codepot.pl;
   access_log   /var/log/nginx/staging.backend.codepot.access.log;
 
-  limit_req zone=backend burst=50 nodelay;
+  limit_req zone=backend burst=10 nodelay;
+  expires -1;
 
   location / {
     proxy_pass  http://backend.codepot.tk:8080/;
