--- a/conf/backend.codepot.pl.conf
+++ b/conf/backend.codepot.pl.conf
@@ -4,7 +4,7 @@ server {
     access_log   /var/log/nginx/backend.codepot.access.log;
 
     limit_req zone=backend burst=10;
-
+    expires -1;
    #location / {
    #    if ($http_user_agent !~* "Jakarta Commons-HttpClient/3.1") {
    #        return       301 https://backend.codepot.pl/;
@@ -30,7 +30,7 @@ server {
 
     limit_req zone=backend burst=75 nodelay;
 
-    expires 60s;
+    expires -1;
 
     location / {
         proxy_pass  http://backend/;
@@ -40,6 +40,8 @@ server {
         proxy_set_header        X-Real-IP       $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Protocol $scheme;
+        add_header X-Upstream $upstream_addr;
+        add_header X-Upstream-Status $upstream_status;
     }
 
     location /static {
