--- a/conf/codepot.pl.conf
+++ b/conf/codepot.pl.conf
@@ -15,7 +15,7 @@ server {
             access_log off;
         }
 
-        proxy_pass  http://codepot.tk:8080;
+        proxy_pass  http://52.28.225.125:8080;
         proxy_redirect off;
         proxy_buffering off;
         proxy_set_header        Host            "codepot.tk";
