--- a/conf/registration.codepot.pl.conf
+++ b/conf/registration.codepot.pl.conf
@@ -9,7 +9,7 @@ server {
     server_name  registration.codepot.pl;
     access_log  /var/log/nginx/staging.registration.codepot.access.log;
     location / {
-        proxy_pass  http://registration.codepot.tk:8080/;
+        proxy_pass  http://52.28.225.125:8080/;
           proxy_redirect off;
         proxy_buffering off;
         proxy_set_header        Host            "registration.codepot.tk";
