--- a/conf/backend.codepot.pl.conf
+++ b/conf/backend.codepot.pl.conf
@@ -2,7 +2,7 @@ server {
   listen       8080;
   server_name  backend.codepot.pl;
   access_log   /var/log/nginx/staging.backend.codepot.access.log;
-  return       302 http://backend.codepot.tk:8080/;
+  return       302 http://52.28.225.125:8080/;
 }
 
 server {
@@ -14,7 +14,7 @@ server {
   expires -1;
 
   location / {
-    proxy_pass  http://backend.codepot.tk:8080/;
+    proxy_pass  http://52.28.225.125:8080/;
     proxy_redirect off;
     proxy_buffering off;
     proxy_set_header        Host            "backend.codepot.tk";
