--- a/nginx.conf
+++ b/nginx.conf
@@ -37,7 +37,7 @@ http {
   server_names_hash_bucket_size 128;
 
   server_tokens off;
-  limit_req_zone $binary_remote_addr zone=backend:5m rate=75r/m;
+  limit_req_zone $binary_remote_addr zone=backend:5m rate=120r/m;
   limit_req_status 429;
   limit_conn_status 429;
 
@@ -82,6 +82,7 @@ http {
     server codepotbackendproduction_django_1:8080 fail_timeout=15s;
     server codepotbackendproduction_django_2:8080 fail_timeout=15s;
     server codepotbackendproduction_django_3:8080 fail_timeout=15s;
+    server codepotbackendproduction_django_4:8080 fail_timeout=15s;
   }
 
   map $http_user_agent $ignore_userAgent {
