--- a/conf/codepot.pl.conf
+++ b/conf/codepot.pl.conf
@@ -15,18 +15,28 @@ server {
         return  302 $scheme://codepot.pl$request_uri;
     }
 
+    proxy_redirect off;
+    proxy_buffering off;
+    proxy_set_header        Host            $host;
+    proxy_set_header        X-Real-IP       $remote_addr;
+    proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+
     location / {
         if ($ignore_userAgent) {
             access_log off;
         }
         expires 60s;
-        proxy_pass  http://codepot.tk/;
-        proxy_redirect off;
-        proxy_buffering off;
-        proxy_set_header        Host            "codepot.tk";
-        proxy_set_header        X-Real-IP       $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        X-Forwarded-Protocol "http";
+        proxy_pass  http://codepot-production:8080;
     }
 
+    location ~* ^.+.(jpg|jpeg|gif|png|ico|js|css|pdf|txt|woff)$ {
+        expires 60s;
+        proxy_pass  http://codepot-production:8080;
+    }
+
+
+    location /status {
+        stub_status;
+        access_log off;
+    }
 }
