--- a/conf/backend.codepot.pl.conf
+++ b/conf/backend.codepot.pl.conf
@@ -1,25 +1,32 @@
 server {
-  listen       8080;
-  server_name  backend.codepot.pl;
-  access_log   /var/log/nginx/staging.backend.codepot.access.log;
-  return       302 http://52.28.225.125:8080/;
-}
-
-server {
   listen       8443 ssl spdy;
   server_name  backend.codepot.pl;
   access_log   /var/log/nginx/staging.backend.codepot.access.log;
 
-  limit_req zone=backend burst=120 nodelay;
-  expires -1;
-
   location / {
-    proxy_pass  http://52.28.225.125:8080/;
+    proxy_pass  http://codepotbackendstaging_django_1:8080/;
     proxy_redirect off;
     proxy_buffering off;
-    proxy_set_header        Host            "backend.codepot.tk";
+    proxy_set_header        Host            $http_host;
     proxy_set_header        X-Real-IP       $remote_addr;
     proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header        X-Forwarded-Protocol "http";
   }
+}
+
+server {
+  listen       8080;
+  server_name  backend.codepot.tk;
+  access_log   /var/log/nginx/staging.backend.codepot.access.log;
+
+  location / {
+    proxy_pass  http://codepotbackendstaging_django_1:8080/;
+    proxy_redirect off;
+    proxy_buffering off;
+    proxy_set_header        Host            $http_host;
+    proxy_set_header        X-Real-IP       $remote_addr;
+    proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header        X-Forwarded-Protocol "http";
+  }
+
 }
