--- a/conf/survey.codepot.pl.conf
+++ b/conf/survey.codepot.pl.conf
@@ -1,7 +1,7 @@
 server {
   listen       8443 ssl spdy;
   server_name  survey.codepot.pl;
-  access_log   /var/log/nginx/staging.backend.codepot.access.log;
+  access_log   /var/log/nginx/staging.survey.codepot.access.log;
 
   location / {
     proxy_pass  http://codepotsurveystaging_survey_1:8080/;
@@ -17,7 +17,7 @@ server {
 server {
   listen       8080;
   server_name  survey.codepot.tk;
-  access_log   /var/log/nginx/staging.backend.codepot.access.log;
+  access_log   /var/log/nginx/staging.survey.codepot.access.log;
 
   location / {
     proxy_pass  http://codepotsurveystaging_survey_1:8080/;
