--- a/conf/survey.codepot.pl.conf
+++ b/conf/survey.codepot.pl.conf
@@ -3,6 +3,12 @@ server {
   server_name  survey.codepot.pl;
   access_log   /var/log/nginx/staging.survey.codepot.access.log;
 
+# add_header access-control-allow-headers 'x-requested-with, content-type, accept, origin, authorization, x-csrftoken, user-agent, accept-encoding';
+# add_header access-control-allow-methods 'GET, POST, PUT, PATCH, DELETE, OPTIONS';
+# add_header access-control-allow-origin '*';
+# add_header access-control-expose-headers 'token';
+# add_header access-control-max-age '86400';
+
   location / {
     proxy_pass  http://codepotsurveystaging_survey_1:8080/;
     proxy_redirect off;
@@ -19,6 +25,12 @@ server {
   server_name  survey.codepot.tk;
   access_log   /var/log/nginx/staging.survey.codepot.access.log;
 
+# add_header access-control-allow-headers 'x-requested-with, content-type, accept, origin, authorization, x-csrftoken, user-agent, accept-encoding';
+# add_header access-control-allow-methods 'GET, POST, PUT, PATCH, DELETE, OPTIONS';
+# add_header access-control-allow-origin '*';
+# add_header access-control-expose-headers 'token';
+# add_header access-control-max-age '86400';
+
   location / {
     proxy_pass  http://codepotsurveystaging_survey_1:8080/;
     proxy_redirect off;
@@ -27,11 +39,7 @@ server {
     proxy_set_header        X-Real-IP       $remote_addr;
     proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header        X-Forwarded-Protocol "http";
-    add_header access-control-allow-headers 'x-requested-with, content-type, accept, origin, authorization, x-csrftoken, user-agent, accept-encoding';
-    add_header access-control-allow-methods 'GET, POST, PUT, PATCH, DELETE, OPTIONS';
-    add_header access-control-allow-origin '*';
-    add_header access-control-expose-headers 'token';
-    add_header access-control-max-age '86400';
+
   }
 
 }
