--- a/conf/survey.codepot.pl.conf
+++ b/conf/survey.codepot.pl.conf
@@ -29,23 +29,7 @@ server {
 
 server {
   listen       80;
-  server_name  survey.codepot.tk;
+  server_name  survey.codepot.pl;
   access_log   /var/log/nginx/survey.codepot.access.log;
-  limit_req zone=backend burst=150 nodelay;
-
-  location / {
-    proxy_pass  http://codepotsurveyproduction_survey_1:8080/;
-    proxy_redirect off;
-    proxy_buffering off;
-    proxy_set_header        Host            $http_host;
-    proxy_set_header        X-Real-IP       $remote_addr;
-    proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header        X-Forwarded-Protocol "http";
-    add_header access-control-allow-headers 'x-requested-with, content-type, accept, origin, authorization, x-csrftoken, user-agent, accept-encoding';
-    add_header access-control-allow-methods 'GET, POST, PUT, PATCH, DELETE, OPTIONS';
-    add_header access-control-allow-origin '*';
-    add_header access-control-expose-headers 'token';
-    add_header access-control-max-age '86400';
-  }
-
+  return 	301 https://survey.codepot.pl$request_uri;
 }
